--- a/src/pages/landingPage/landingPage.css
+++ b/src/pages/landingPage/landingPage.css
@@ -36,3 +36,17 @@
     position: fixed;
     mix-blend-mode: difference;
 }
+
+@media only screen and (max-width: 1000px) {
+    #landing_cursor {
+        visibility: hidden;
+    }
+
+    .landing_title ul {
+        font-size: 4rem;
+    }
+
+    .landing_container p {
+        font-size: 0.75rem;
+    }
+}
