--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,6 +14,8 @@ body {
     height: 100%;
 }
 
-main {
-    grid-column: 1/3;
+@media only screen and (max-width: 600px) {
+    #root {
+        grid-template-columns: 1fr;
+    }
 }
